# memebot

./: .env  .gitignore  main.py  pyproject.toml  requirements.txt  server.py
cog/: coinbanker.py  huu.py  kimoshine.py  message.py  onesan.py  pensann.py  penword.py  pin.py
module/: confirm.py  decorater.py
